feat(templates): remove link to list (too hard on server)

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
             "App\\": ""
         }
     },
-    "license": "MIT",
+    "license": "The Unlicence",
     "authors": [
         {
             "name": "Élise Duverdier",
