--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,12 +8,12 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
-    
+
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.1.0
       with:
-        server: ${{ secrets.ftp_host }}
-        server-dir: /www/cellular_automata
+        server: ${{ secrets.FTP_HOST }}
+        server-dir: /www/cellular_automata/
         port: 21
-        username: ${{ secrets.ftp_user}}
-        password: ${{ secrets.ftp_password }}
+        username: ${{ secrets.FTP_USER}}
+        password: ${{ secrets.FTP_PASSWORD }}
